--- a/Class/week12.html
+++ b/Class/week12.html
@@ -25,8 +25,9 @@
             // image.setAttribute("width", "500px");
 
             let com3 = document.getElementsByTagName("hr");
-            for(i in com3){
-                com3[i].style.height = "15px";
+            //for(i in com3){
+            for(i=0; i<com3.length ; i++){
+                com3[i].style.border = "3px solid red";
             }
         }
     </script>
