--- a/Class/1.자바스크립트객체생성및활용.html
+++ b/Class/1.자바스크립트객체생성및활용.html
@@ -1,3 +1,20 @@
+<!-- 
+1.코어 객체 종류
+Array, Date, String, Math 등
+
+2.코어 객체 생성
+new 키워드 이용
+    let today = new Date(); 	// 시간 정보를 다루는 Date 타입의 객체 생성
+    let msg = new String(“Hello”); // “Hello” 문자열을 담은 String 타입의 객체 생성
+객체가 생성되면 객체 내부에 프로퍼티와 메소드들 존재
+
+3.객체 접근
+객체와 멤버 사이에 점(.) 연산자 이용
+    obj.프로퍼티 = 값;		// 객체 obj의 프로퍼티 값 변경
+    변수 = obj.프로퍼티;	// 객체 obj의 프로퍼티 값 알아내기
+    obj.메소드(매개변수 값들);	// 객체 obj의 메소드 호출 -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
