--- a/Class/5.Date 객체 생성 및 활용.html
+++ b/Class/5.Date 객체 생성 및 활용.html
@@ -1,3 +1,18 @@
+<!-- 
+Date 객체
+	시간 정보를 담는 객체
+		현재 시간 정보
+			let now = new Date(); // 현재 날짜와 시간(시, 분, 초) 값으로 초기화된 객체 생성
+
+		학기 시작일 2017년 3월 1일의 날짜 기억
+			let startDay = new Date(2017, 2, 1); 		// 2017년 3월 1일(2는 3월을 뜻함)
+
+	Date 객체 활용
+			let now = new Date(); 	// 현재 2017년 5월 15일 저녁 8시 48분이라면
+			let date = now.getDate(); 	// 오늘 날짜. date = 15
+			let hour = now.getHours(); 	// 지금 시간. hour = 20
+ -->
+
 <!DOCTYPE html>
 <html>
 <head>
