--- a/Class/2.[]로 배열만들기.html
+++ b/Class/2.[]로 배열만들기.html
@@ -1,3 +1,25 @@
+<!--
+1.배열 만드는 2가지 방법
+	[]로 배열 만들기
+	Array 객체로 배열 만들기
+2.[]로 배열 만들기
+	-[] 안에는 원소들의 초기 값 나열
+		let week = [“월”, “화”, “수”, “목”, “금”, “토”, “일”];
+		let plots = [-20, -5, 0, 15, 20];
+	
+	-배열 크기 : 배열의 크기는 고정되지 않고 원소 추가 시 늘어남
+		-배열의 끝에 원소 추가
+		plots[5] = 33; // plots 배열에 6번째 원소 추가. 배열 크기는 6이 됨
+		plots[6] = 22; // plots 배열에 7번째 원소 추가. 배열 크기는 7이 됨
+
+		-주의 : 현재 배열보다 큰 인덱스에 원소를 추가하면 값이 비어 있는 중간의 원소들도 생기는 문제 발생
+		plots[10] = 33; // 주의. plots 배열의 크기는 11개가되고, 
+        				// plots[7], plots[8], plots[9]의 값은 모두 undefined 값 -->
+
+
+
+
+<!-- []로 정수 5를 저장할 배열을 만들고, 원소의 값만큼 ‘*’를 출력하는 프로그램을 작성하라. -->
 <!DOCTYPE html>
 <html>
 <head>
