--- a/Class/3.Array객체로 배열 만들기.html
+++ b/Class/3.Array객체로 배열 만들기.html
@@ -1,4 +1,44 @@
+<!-- 
+Array로 배열 만들기
+	1.초기 값을 가진 배열 생성
+		let week = new Array(“월”, “화”, “수”, “목”, “금”, “토”, “일”);
+	2.초기화되지 않은 배열 생성
+		-일정 크기의 배열 생성 후 나중에 원소 값 저장
+
+		let week = new Array(7); 		// 7개의 원소를 가진 배열 생성
+		week[0] = “월”;
+		week[1] = “화”;
+		...
+		week[6] = “일”;
+
+	3.빈 배열 생성
+		-원소 개수를 예상할 수 없는 경우
+		let week = new Array(); 		// 빈 배열 생성
+		week[0] = “월”; 				// 배열 week 크기 자동으로 1
+		week[1] = “화”; 				// 배열 week 크기 자동으로 2 -->
+
+
+<!-- 
+배열의 원소 개수, length 프로퍼티	
+	배열의 크기 : Array 객체의 length 프로퍼티
+		let plots = [-20, -5, 0, 15, 20];
+		let week = new Array(“월”, “화”, “수”, “목”, “금”, “토”, “일”);
+		let m = plots.length; 		// m은 5
+		let n = week.length; 		// n은 7
+
+	length 프로퍼티는 사용자가 임의로 값 변경 가능
+		length 프로퍼티는 Array 객체에 의해 자동 관리
+			사용자가 임의로 값 변경 가능
+			배열의 크기를 줄이거나 늘일 수 있음
+
+			예 plots.length = 10; // plots의 크기는 5에서 10으로 늘어남
+			   plots.length = 2; // plots의 크기는 2로 줄어 들어, 
+								// 처음 2개의 원소 외에는 모두 삭제 됨
+			 -->
+
+
 <!DOCTYPE html>
+
 <html>
 <head>
 <meta charset="utf-8">
