--- a/Class/30.마우스 관련 이벤트 리스너 마지막 PPT 30p..html
+++ b/Class/30.마우스 관련 이벤트 리스너 마지막 PPT 30p..html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html><head><meta charset="utf-8">
 <title>마우스 관련 리스너</title>
+<!-- 
+onmousedown : 마우스 버튼을 누르는 순간 
+onmouseup : 눌러진 버튼이 놓여지는 순간
+onmouseover : 마우스가 태그 위로 올라오는 순간. 자식 영역 포함
+onmouseout : 마우스가 태그 위로 올라오는 순간. 자식 영역 포함
+onmouseenter : 마우스가 태그 위로 올라오는 순간. 버블 단계 없음
+onmouseleave : 마우스가 태그 위로 올라오는 순간. 버블 단계 없음
+onwheel : HTML 태그에 마우스 휠이 구르는 동안 계속 호출 -->
+<!-- 
+obj.onwheel = function (e) { 
+	if(e.wheelDelta < 0) { // 아래쪽으로 휠을 굴린 경우
+		...
+	}
+	else { // 위쪽으로 휠을 굴린 경우
+		...
+	}
+}; -->
+
+
 <script>
 let width=1; // 테두리 두께
 function down(obj) {
