--- a/Class/9.new Object()로 계좌를 표현하는 account 객체 만들기.html
+++ b/Class/9.new Object()로 계좌를 표현하는 account 객체 만들기.html
@@ -1,3 +1,22 @@
+<!-- 
+사용자가 새로운 타입의 객체 작성 가능 : 3 가지 방법
+	1. 직접 객체 만들기
+		new Object() 이용
+		리터럴 표기법 이용
+	2. 객체의 틀(프로토타입)을 만들고 객체 생성하기
+샘플 
+	은행 계좌를 표현하는 account 객체 -->
+<!-- 
+과정
+	1. new Object()로 빈 객체 생성
+	2. 빈 객체에 프로퍼티 추가
+		새로운 프로퍼티 추가(프로퍼티 이름과 초기값 지정)
+	3. 빈 객체에 메소드 추가
+		메소드로 사용할 함수 미리 작성
+		새 메소드 추가(메소드 이름에 함수 지정)
+		 -->
+
+
 <!DOCTYPE html>
 <html><head><meta charset="utf-8"><title>new Object()로 사용자 객체 만들기</title>
 <script>
